--- a/WolvenKit.Scaleform/WolvenKit.Scaleform.csproj
+++ b/WolvenKit.Scaleform/WolvenKit.Scaleform.csproj
@@ -78,6 +78,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WeifenLuo.WinFormsUI.Docking, Version=3.0.6.0, Culture=neutral, PublicKeyToken=5cded1a1a0a7b481, processorArchitecture=MSIL">
+      <HintPath>..\packages\DockPanelSuite.3.0.6\lib\net40\WeifenLuo.WinFormsUI.Docking.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ByteConversion.cs" />
@@ -86,6 +89,12 @@
     <Compile Include="Constants.cs" />
     <Compile Include="CriUsmStream.cs" />
     <Compile Include="FileUtil.cs" />
+    <Compile Include="frmUsmPlayer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmUsmPlayer.Designer.cs">
+      <DependentUpon>frmUsmPlayer.cs</DependentUpon>
+    </Compile>
     <Compile Include="MathUtil.cs" />
     <Compile Include="Mpeg1Stream.cs" />
     <Compile Include="MpegStream.cs" />
@@ -94,6 +103,25 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RiffCalculatingOffestDescription.cs" />
     <Compile Include="SofdecStream.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="frmUsmPlayer.resx">
+      <DependentUpon>frmUsmPlayer.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="ffmpeg\ffmpeg.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ffmpeg\ffplay.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ffmpeg\ffprobe.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
