CRC writing fix and QoL UI features (#135)
* Update CGenericGrassMask.cs

* wcc tasks helper

- added a wcc_lite command list and helper

* start implementing wcc_integration

- import-file command in Mod Explorer
- wcc_helper implementation in main form
- restructured mod buiding process

* cr2w IO refactor

- renamed some unknown variables
- restructured cr2w reading/writing
- fixed crc calculations

* bugfix

fixed a NotImplementedExecption

* Cooking integration

- added a cook button to modexplorer

* .net update to 4.8

* Wolvenkit.Net update to .net 4.8 and bugfix

* ILoggerservice and fixes

- hooked up threadsafe logging
- fixes in ModExplorer

* Fixes

- relative path clipping on manual import
- crc chunk missmatch bugfix
- reworked manual import menu
- fixed a bug when creating collision cache

* bugfix

- fixed a bug where the manual import would not work

* Fixes

- fixed a bug where wcc log would block
- fixed slow loading of large chunk lists
- made manual import exclusive to \Raw folder

* QoL UI changes

- added a button to toggle between chunk list and tree view
- minimalist main app design: removed title bar and moved control buttons into menu bar
- made toolbar moveable
- made status bar background color always desktop blue
- fixed chunk editor controls becoming unreadable on dark theme

* wcc integration

- consistent use of wccHelper

--- a/WolvenKit.Common/WolvenKit.Common.csproj
+++ b/WolvenKit.Common/WolvenKit.Common.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WolvenKit.Interfaces</RootNamespace>
     <AssemblyName>WolvenKit.Interfaces</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -96,7 +96,16 @@
     <Compile Include="IWitcherArchiveType.cs" />
     <Compile Include="IWitcherFile.cs" />
     <Compile Include="ObjectDumper.cs" />
+    <Compile Include="ObservableObject.cs" />
     <Compile Include="ProtoList.cs" />
+    <Compile Include="Services\ILoggerService.cs" />
+    <Compile Include="Services\LoggerService.cs" />
+    <Compile Include="Services\LoggerTypes.cs" />
+    <Compile Include="Wcc\enums.cs" />
+    <Compile Include="Wcc\REDAttributes.cs" />
+    <Compile Include="Wcc\wcc_command.cs" />
+    <Compile Include="Wcc\wcc_commands.cs" />
+    <Compile Include="Wcc\wcc_task.cs" />
     <Compile Include="WitcherTreeNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
