--- a/WolvenKit.CR2W/WolvenKit.CR2W.csproj
+++ b/WolvenKit.CR2W/WolvenKit.CR2W.csproj
@@ -151,49 +151,51 @@
     <Compile Include="InvalidChunkTypeException.cs" />
     <Compile Include="InvalidFileTypeException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Types\CArray.cs" />
+    <Compile Include="Types\Basic\CArray.cs" />
     <Compile Include="Types\CBitmapTexture.cs" />
-    <Compile Include="Types\CByteArray.cs" />
-    <Compile Include="Types\CBytes.cs" />
+    <Compile Include="Types\Basic\CByteArray.cs" />
+    <Compile Include="Types\Basic\CBytes.cs" />
     <Compile Include="Types\CColor.cs" />
     <Compile Include="Types\CColorShift.cs" />
-    <Compile Include="Types\CDateTime.cs" />
+    <Compile Include="Types\Basic\CDateTime.cs" />
     <Compile Include="Types\CEngineQsTranform.cs" />
     <Compile Include="Types\CEngineTransform.cs" />
     <Compile Include="Types\CEntity.cs" />
-    <Compile Include="Types\CFlags.cs" />
-    <Compile Include="Types\CFloat.cs" />
+    <Compile Include="Types\Basic\CFlags.cs" />
+    <Compile Include="Types\Basic\CFloat.cs" />
     <Compile Include="Types\CFoliageResource.cs" />
-    <Compile Include="Types\CGUID.cs" />
-    <Compile Include="Types\CHandle.cs" />
+    <Compile Include="Types\Basic\CGUID.cs" />
+    <Compile Include="Types\Basic\CHandle.cs" />
     <Compile Include="Types\CLocalizedString.cs" />
     <Compile Include="Types\CMaterialGraph.cs" />
     <Compile Include="Types\CMaterialInstance.cs" />
     <Compile Include="Types\CComponent.cs" />
-    <Compile Include="Types\CName.cs" />
+    <Compile Include="Types\Basic\CName.cs" />
     <Compile Include="Types\CParticleEmitter.cs" />
-    <Compile Include="Types\CPtr.cs" />
+    <Compile Include="Types\Basic\CPtr.cs" />
     <Compile Include="Types\CQuestScriptBlock.cs" />
-    <Compile Include="Types\CR2WTypeManager.cs" />
+    <Compile Include="Types\Utils\CR2WTypeManager.cs" />
     <Compile Include="Types\CSkeletalAnimationSetEntry.cs" />
-    <Compile Include="Types\CSoft.cs" />
+    <Compile Include="Types\Basic\CSoft.cs" />
     <Compile Include="Types\CStorySceneSection.cs" />
-    <Compile Include="Types\CString.cs" />
-    <Compile Include="Types\CStringAnsi.cs" />
+    <Compile Include="Types\Basic\CString.cs" />
+    <Compile Include="Types\Basic\CStringAnsi.cs" />
     <Compile Include="Types\CSwfResource.cs" />
-    <Compile Include="Types\CTagList.cs" />
+    <Compile Include="Types\Basic\CTagList.cs" />
     <Compile Include="Types\CVariable.cs" />
     <Compile Include="Types\CVariant.cs" />
     <Compile Include="Types\CVector.cs" />
     <Compile Include="Types\CVector3D.cs" />
     <Compile Include="Types\CXml.cs" />
-    <Compile Include="Types\Enums.cs" />
+    <Compile Include="Types\Utils\Enums.cs" />
     <Compile Include="Types\IdTag.cs" />
     <Compile Include="Types\IntegerTypes.cs" />
     <Compile Include="Types\MissingTypeException.cs" />
     <Compile Include="Types\SAppearanceAttachment.cs" />
     <Compile Include="Types\SParticleEmitterLODLevel.cs" />
     <Compile Include="Types\SSeedKeyValue.cs" />
+    <Compile Include="Types\Utils\CBufferType1.cs" />
+    <Compile Include="Types\Utils\CBufferType2.cs" />
     <Compile Include="W3ReaderExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -210,6 +212,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
