--- a/WolvenKit.CR2W/WolvenKit.CR2W.csproj
+++ b/WolvenKit.CR2W/WolvenKit.CR2W.csproj
@@ -82,6 +82,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -182,14 +183,14 @@
     <Compile Include="Types\Basic\CStringAnsi.cs" />
     <Compile Include="Types\CSwfResource.cs" />
     <Compile Include="Types\Basic\CTagList.cs" />
-    <Compile Include="Types\CVariable.cs" />
+    <Compile Include="Types\Basic\CVariable.cs" />
     <Compile Include="Types\CVariant.cs" />
-    <Compile Include="Types\CVector.cs" />
+    <Compile Include="Types\Basic\CVector.cs" />
     <Compile Include="Types\CVector3D.cs" />
-    <Compile Include="Types\CXml.cs" />
+    <Compile Include="Types\Basic\CXml.cs" />
     <Compile Include="Types\Utils\Enums.cs" />
-    <Compile Include="Types\IdTag.cs" />
-    <Compile Include="Types\IntegerTypes.cs" />
+    <Compile Include="Types\Basic\IdTag.cs" />
+    <Compile Include="Types\Basic\IntegerTypes.cs" />
     <Compile Include="Types\MissingTypeException.cs" />
     <Compile Include="Types\SAppearanceAttachment.cs" />
     <Compile Include="Types\SParticleEmitterLODLevel.cs" />
@@ -197,6 +198,7 @@
     <Compile Include="Types\Utils\CBufferType1.cs" />
     <Compile Include="Types\Utils\CBufferType2.cs" />
     <Compile Include="W3ReaderExtensions.cs" />
+    <Compile Include="XmlSerializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Editors\ByteArrayEditor.resx">
