CLayerGroup and CComponent unknown bytes
- added basic variable size check, will break the debugger if variables read too few bytes
- parsed CComponent unknown bytes
- added CLayerGroup parsing
- added CLayerInfo parsing
- moved CSectorData block variable placement
- misc bug fixes

--- a/WolvenKit.CR2W/WolvenKit.CR2W.csproj
+++ b/WolvenKit.CR2W/WolvenKit.CR2W.csproj
@@ -137,6 +137,7 @@
     <Compile Include="Types\CEvaluatorFloatCurve.cs" />
     <Compile Include="Types\CGenericGrassMask.cs" />
     <Compile Include="Types\CIndexed2dArray.cs" />
+    <Compile Include="Types\CLayerGroup.cs" />
     <Compile Include="Types\CLayerInfo.cs" />
     <Compile Include="Types\CMatrix4x4.cs" />
     <Compile Include="Types\CParticleSystem.cs" />
