--- a/WolvenKit.CR2W/WolvenKit.CR2W.csproj
+++ b/WolvenKit.CR2W/WolvenKit.CR2W.csproj
@@ -129,33 +129,38 @@
     <Compile Include="Editors\PtrEditor.Designer.cs">
       <DependentUpon>PtrEditor.cs</DependentUpon>
     </Compile>
+    <Compile Include="Exceptions\InvalidParsingException.cs" />
     <Compile Include="FNV1A\FNV1A32HashAlgorithm.cs" />
     <Compile Include="FNV1A\FNV1A64HashAlgorithm.cs" />
+    <Compile Include="Types\Basic\CCurve.cs" />
+    <Compile Include="Types\Basic\EntityHandle.cs" />
     <Compile Include="Types\CBuffer.cs" />
     <Compile Include="Types\CCubeTexture.cs" />
     <Compile Include="Types\CDecalSpawne.cs" />
+    <Compile Include="Types\CExtAnimEventsFile.cs" />
+    <Compile Include="Types\CEntityTemplate.cs" />
     <Compile Include="Types\CEvaluatorFloatCurve.cs" />
     <Compile Include="Types\CGenericGrassMask.cs" />
     <Compile Include="Types\CIndexed2dArray.cs" />
     <Compile Include="Types\CLayerGroup.cs" />
     <Compile Include="Types\CLayerInfo.cs" />
-    <Compile Include="Types\CMatrix4x4.cs" />
+    <Compile Include="Types\Basic\CMatrix4x4.cs" />
     <Compile Include="Types\CParticleSystem.cs" />
     <Compile Include="Types\CRagdoll.cs" />
     <Compile Include="Types\CSectorData.cs" />
     <Compile Include="Types\CSwarmCellMap.cs" />
     <Compile Include="Types\CSwfTexture.cs" />
-    <Compile Include="Types\CVector2D.cs" />
+    <Compile Include="Types\Basic\CVector2D.cs" />
     <Compile Include="Types\EmitterDelaySettings.cs" />
     <Compile Include="Types\EmitterDurationSettings.cs" />
     <Compile Include="Types\SBoneIndiceMapping.cs" />
     <Compile Include="Types\SDynamicDecalMaterialInfo.cs" />
     <Compile Include="Types\SFoliageInstance.cs" />
     <Compile Include="HslColor.cs" />
-    <Compile Include="IVariableEditor.cs" />
+    <Compile Include="Editors\IVariableEditor.cs" />
     <Compile Include="ILocalizedStringSource.cs" />
-    <Compile Include="InvalidChunkTypeException.cs" />
-    <Compile Include="InvalidFileTypeException.cs" />
+    <Compile Include="Exceptions\InvalidChunkTypeException.cs" />
+    <Compile Include="Exceptions\InvalidFileTypeException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Types\Basic\CArray.cs" />
     <Compile Include="Types\CBitmapTexture.cs" />
@@ -191,12 +196,12 @@
     <Compile Include="Types\Basic\CVariable.cs" />
     <Compile Include="Types\CVariant.cs" />
     <Compile Include="Types\Basic\CVector.cs" />
-    <Compile Include="Types\CVector3D.cs" />
+    <Compile Include="Types\Basic\CVector3D.cs" />
     <Compile Include="Types\Basic\CXml.cs" />
     <Compile Include="Types\Utils\Enums.cs" />
     <Compile Include="Types\Basic\IdTag.cs" />
     <Compile Include="Types\Basic\IntegerTypes.cs" />
-    <Compile Include="Types\MissingTypeException.cs" />
+    <Compile Include="Exceptions\MissingTypeException.cs" />
     <Compile Include="Types\SAppearanceAttachment.cs" />
     <Compile Include="Types\SParticleEmitterLODLevel.cs" />
     <Compile Include="Types\SParticleEmitterModuleData.cs" />
