--- a/WolvenKit.CR2W/WolvenKit.CR2W.csproj
+++ b/WolvenKit.CR2W/WolvenKit.CR2W.csproj
@@ -132,16 +132,19 @@
     <Compile Include="Exceptions\InvalidParsingException.cs" />
     <Compile Include="FNV1A\FNV1A32HashAlgorithm.cs" />
     <Compile Include="FNV1A\FNV1A64HashAlgorithm.cs" />
+    <Compile Include="Types\Basic\CCompressedArray.cs" />
     <Compile Include="Types\Basic\CCurve.cs" />
     <Compile Include="Types\Basic\EntityHandle.cs" />
     <Compile Include="Types\CBuffer.cs" />
     <Compile Include="Types\CCubeTexture.cs" />
     <Compile Include="Types\CDecalSpawne.cs" />
+    <Compile Include="Types\CWayPointsCollection.cs" />
+    <Compile Include="Types\CWayPointsCollectionsSet.cs" />
     <Compile Include="Types\CExtAnimEventsFile.cs" />
     <Compile Include="Types\CEntityTemplate.cs" />
     <Compile Include="Types\CEvaluatorFloatCurve.cs" />
     <Compile Include="Types\CGenericGrassMask.cs" />
-    <Compile Include="Types\CIndexed2dArray.cs" />
+    <Compile Include="Types\Basic\CIndexed2dArray.cs" />
     <Compile Include="Types\CLayerGroup.cs" />
     <Compile Include="Types\CLayerInfo.cs" />
     <Compile Include="Types\Basic\CMatrix4x4.cs" />
@@ -151,11 +154,11 @@
     <Compile Include="Types\CSwarmCellMap.cs" />
     <Compile Include="Types\CSwfTexture.cs" />
     <Compile Include="Types\Basic\CVector2D.cs" />
-    <Compile Include="Types\EmitterDelaySettings.cs" />
-    <Compile Include="Types\EmitterDurationSettings.cs" />
-    <Compile Include="Types\SBoneIndiceMapping.cs" />
-    <Compile Include="Types\SDynamicDecalMaterialInfo.cs" />
-    <Compile Include="Types\SFoliageInstance.cs" />
+    <Compile Include="Types\Structs\EmitterDelaySettings.cs" />
+    <Compile Include="Types\Structs\EmitterDurationSettings.cs" />
+    <Compile Include="Types\Structs\SBoneIndiceMapping.cs" />
+    <Compile Include="Types\Structs\SDynamicDecalMaterialInfo.cs" />
+    <Compile Include="Types\Structs\SFoliageInstance.cs" />
     <Compile Include="HslColor.cs" />
     <Compile Include="Editors\IVariableEditor.cs" />
     <Compile Include="ILocalizedStringSource.cs" />
@@ -166,7 +169,7 @@
     <Compile Include="Types\CBitmapTexture.cs" />
     <Compile Include="Types\Basic\CByteArray.cs" />
     <Compile Include="Types\Basic\CBytes.cs" />
-    <Compile Include="Types\CColor.cs" />
+    <Compile Include="Types\Basic\CColor.cs" />
     <Compile Include="Types\CColorShift.cs" />
     <Compile Include="Types\Basic\CDateTime.cs" />
     <Compile Include="Types\CEngineQsTranform.cs" />
@@ -202,10 +205,10 @@
     <Compile Include="Types\Basic\IdTag.cs" />
     <Compile Include="Types\Basic\IntegerTypes.cs" />
     <Compile Include="Exceptions\MissingTypeException.cs" />
-    <Compile Include="Types\SAppearanceAttachment.cs" />
-    <Compile Include="Types\SParticleEmitterLODLevel.cs" />
-    <Compile Include="Types\SParticleEmitterModuleData.cs" />
-    <Compile Include="Types\SSeedKeyValue.cs" />
+    <Compile Include="Types\Structs\SAppearanceAttachment.cs" />
+    <Compile Include="Types\Structs\SParticleEmitterLODLevel.cs" />
+    <Compile Include="Types\Structs\SParticleEmitterModuleData.cs" />
+    <Compile Include="Types\Structs\SSeedKeyValue.cs" />
     <Compile Include="Types\Utils\CBufferType1.cs" />
     <Compile Include="Types\Utils\CBufferType2.cs" />
     <Compile Include="W3ReaderExtensions.cs" />
