CEntity, CComponent, redwpst parsing (#140)
* cr2w IO rework

- reorganized cr2w table classes

* embedded files and misc fixes

- fixed embeddded file reading
- unknown bytes support for CComponent child classes
- fixed w2l entity component parsing
- themed embedded file form
- fixed window maximizing issues

* w2l compressed buffer

- fixed a bug in asset browser where the file size was not displayed
- implemented basic w2l compressed components reading and writing
- disabled for now

* CEntity buffer IO and Name Hashing

- fixed a cr2w name table hashing error: include nullbytes
- fixed that writing Ctaglist would write byte instead of Bit6
- implemented buffer 1 and buffer 2 unknown data reading and writing for CEntities

* xml serialization and centity buffer writing

- added an option to serialize table data from cr2w to xml
- finished CEntity buffer parsing

* CLayerGroup and CComponent unknown bytes

- added basic variable size check, will break the debugger if variables read too few bytes
- parsed CComponent unknown bytes
- added CLayerGroup parsing
- added CLayerInfo parsing
- moved CSectorData block variable placement
- misc bug fixes

* CEntity and CComponent Parsing

- added many CEntity and CComponent classes
- CSwfResource parsing

* redwpset parsing

- pared all unknown bytes in redwpset

* wcc_lite integration texture importing support

-  texture importing support for manual  import

--- a/WolvenKit.CR2W/WolvenKit.CR2W.csproj
+++ b/WolvenKit.CR2W/WolvenKit.CR2W.csproj
@@ -82,6 +82,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -128,78 +129,90 @@
     <Compile Include="Editors\PtrEditor.Designer.cs">
       <DependentUpon>PtrEditor.cs</DependentUpon>
     </Compile>
+    <Compile Include="Exceptions\InvalidParsingException.cs" />
     <Compile Include="FNV1A\FNV1A32HashAlgorithm.cs" />
     <Compile Include="FNV1A\FNV1A64HashAlgorithm.cs" />
+    <Compile Include="Types\Basic\CCompressedArray.cs" />
+    <Compile Include="Types\Basic\CCurve.cs" />
+    <Compile Include="Types\Basic\EntityHandle.cs" />
     <Compile Include="Types\CBuffer.cs" />
     <Compile Include="Types\CCubeTexture.cs" />
     <Compile Include="Types\CDecalSpawne.cs" />
+    <Compile Include="Types\CWayPointsCollection.cs" />
+    <Compile Include="Types\CWayPointsCollectionsSet.cs" />
+    <Compile Include="Types\CExtAnimEventsFile.cs" />
+    <Compile Include="Types\CEntityTemplate.cs" />
     <Compile Include="Types\CEvaluatorFloatCurve.cs" />
     <Compile Include="Types\CGenericGrassMask.cs" />
-    <Compile Include="Types\CIndexed2dArray.cs" />
+    <Compile Include="Types\Basic\CIndexed2dArray.cs" />
+    <Compile Include="Types\CLayerGroup.cs" />
     <Compile Include="Types\CLayerInfo.cs" />
-    <Compile Include="Types\CMatrix4x4.cs" />
+    <Compile Include="Types\Basic\CMatrix4x4.cs" />
     <Compile Include="Types\CParticleSystem.cs" />
     <Compile Include="Types\CRagdoll.cs" />
     <Compile Include="Types\CSectorData.cs" />
     <Compile Include="Types\CSwarmCellMap.cs" />
     <Compile Include="Types\CSwfTexture.cs" />
-    <Compile Include="Types\CVector2D.cs" />
-    <Compile Include="Types\EmitterDelaySettings.cs" />
-    <Compile Include="Types\EmitterDurationSettings.cs" />
-    <Compile Include="Types\SBoneIndiceMapping.cs" />
-    <Compile Include="Types\SDynamicDecalMaterialInfo.cs" />
-    <Compile Include="Types\SFoliageInstance.cs" />
+    <Compile Include="Types\Basic\CVector2D.cs" />
+    <Compile Include="Types\Structs\EmitterDelaySettings.cs" />
+    <Compile Include="Types\Structs\EmitterDurationSettings.cs" />
+    <Compile Include="Types\Structs\SBoneIndiceMapping.cs" />
+    <Compile Include="Types\Structs\SDynamicDecalMaterialInfo.cs" />
+    <Compile Include="Types\Structs\SFoliageInstance.cs" />
     <Compile Include="HslColor.cs" />
-    <Compile Include="IVariableEditor.cs" />
+    <Compile Include="Editors\IVariableEditor.cs" />
     <Compile Include="ILocalizedStringSource.cs" />
-    <Compile Include="InvalidChunkTypeException.cs" />
-    <Compile Include="InvalidFileTypeException.cs" />
+    <Compile Include="Exceptions\InvalidChunkTypeException.cs" />
+    <Compile Include="Exceptions\InvalidFileTypeException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Types\CArray.cs" />
+    <Compile Include="Types\Basic\CArray.cs" />
     <Compile Include="Types\CBitmapTexture.cs" />
-    <Compile Include="Types\CByteArray.cs" />
-    <Compile Include="Types\CBytes.cs" />
-    <Compile Include="Types\CColor.cs" />
+    <Compile Include="Types\Basic\CByteArray.cs" />
+    <Compile Include="Types\Basic\CBytes.cs" />
+    <Compile Include="Types\Basic\CColor.cs" />
     <Compile Include="Types\CColorShift.cs" />
-    <Compile Include="Types\CDateTime.cs" />
+    <Compile Include="Types\Basic\CDateTime.cs" />
     <Compile Include="Types\CEngineQsTranform.cs" />
     <Compile Include="Types\CEngineTransform.cs" />
     <Compile Include="Types\CEntity.cs" />
-    <Compile Include="Types\CFlags.cs" />
-    <Compile Include="Types\CFloat.cs" />
+    <Compile Include="Types\Basic\CFlags.cs" />
+    <Compile Include="Types\Basic\CFloat.cs" />
     <Compile Include="Types\CFoliageResource.cs" />
-    <Compile Include="Types\CGUID.cs" />
-    <Compile Include="Types\CHandle.cs" />
+    <Compile Include="Types\Basic\CGUID.cs" />
+    <Compile Include="Types\Basic\CHandle.cs" />
     <Compile Include="Types\CLocalizedString.cs" />
     <Compile Include="Types\CMaterialGraph.cs" />
     <Compile Include="Types\CMaterialInstance.cs" />
     <Compile Include="Types\CComponent.cs" />
-    <Compile Include="Types\CName.cs" />
+    <Compile Include="Types\Basic\CName.cs" />
     <Compile Include="Types\CParticleEmitter.cs" />
-    <Compile Include="Types\CPtr.cs" />
+    <Compile Include="Types\Basic\CPtr.cs" />
     <Compile Include="Types\CQuestScriptBlock.cs" />
-    <Compile Include="Types\CR2WTypeManager.cs" />
+    <Compile Include="Types\Utils\CR2WTypeManager.cs" />
     <Compile Include="Types\CSkeletalAnimationSetEntry.cs" />
-    <Compile Include="Types\CSoft.cs" />
+    <Compile Include="Types\Basic\CSoft.cs" />
     <Compile Include="Types\CStorySceneSection.cs" />
-    <Compile Include="Types\CString.cs" />
-    <Compile Include="Types\CStringAnsi.cs" />
+    <Compile Include="Types\Basic\CString.cs" />
+    <Compile Include="Types\Basic\CStringAnsi.cs" />
     <Compile Include="Types\CSwfResource.cs" />
-    <Compile Include="Types\CTagList.cs" />
-    <Compile Include="Types\CVariable.cs" />
+    <Compile Include="Types\Basic\CTagList.cs" />
+    <Compile Include="Types\Basic\CVariable.cs" />
     <Compile Include="Types\CVariant.cs" />
-    <Compile Include="Types\CVector.cs" />
-    <Compile Include="Types\CVector3D.cs" />
-    <Compile Include="Types\CXml.cs" />
-    <Compile Include="Types\Enums.cs" />
-    <Compile Include="Types\IdTag.cs" />
-    <Compile Include="Types\IntegerTypes.cs" />
-    <Compile Include="Types\MissingTypeException.cs" />
-    <Compile Include="Types\SAppearanceAttachment.cs" />
-    <Compile Include="Types\SParticleEmitterLODLevel.cs" />
-    <Compile Include="Types\SParticleEmitterModuleData.cs" />
-    <Compile Include="Types\SSeedKeyValue.cs" />
+    <Compile Include="Types\Basic\CVector.cs" />
+    <Compile Include="Types\Basic\CVector3D.cs" />
+    <Compile Include="Types\Basic\CXml.cs" />
+    <Compile Include="Types\Utils\Enums.cs" />
+    <Compile Include="Types\Basic\IdTag.cs" />
+    <Compile Include="Types\Basic\IntegerTypes.cs" />
+    <Compile Include="Exceptions\MissingTypeException.cs" />
+    <Compile Include="Types\Structs\SAppearanceAttachment.cs" />
+    <Compile Include="Types\Structs\SParticleEmitterLODLevel.cs" />
+    <Compile Include="Types\Structs\SParticleEmitterModuleData.cs" />
+    <Compile Include="Types\Structs\SSeedKeyValue.cs" />
+    <Compile Include="Types\Utils\CBufferType1.cs" />
+    <Compile Include="Types\Utils\CBufferType2.cs" />
     <Compile Include="W3ReaderExtensions.cs" />
+    <Compile Include="XmlSerializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Editors\ByteArrayEditor.resx">
@@ -215,6 +228,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
