--- a/WolvenKit.CR2W/WolvenKit.CR2W.csproj
+++ b/WolvenKit.CR2W/WolvenKit.CR2W.csproj
@@ -132,15 +132,18 @@
     <Compile Include="Exceptions\InvalidParsingException.cs" />
     <Compile Include="FNV1A\FNV1A32HashAlgorithm.cs" />
     <Compile Include="FNV1A\FNV1A64HashAlgorithm.cs" />
-    <Compile Include="Types\Basic\CCompressedArray.cs" />
+    <Compile Include="Types\Structs\SSkeletonRigData.cs" />
+    <Compile Include="Types\Utils\CCompressedBuffer.cs" />
     <Compile Include="Types\Basic\CCurve.cs" />
+    <Compile Include="Types\Basic\CQuaternion.cs" />
     <Compile Include="Types\Basic\EntityHandle.cs" />
+    <Compile Include="Types\CSkeleton.cs" />
     <Compile Include="Types\CPhysicsDestructionResource.cs" />
     <Compile Include="Types\Utils\CPaddedBuffer.cs" />
     <Compile Include="Types\Utils\CBuffer.cs" />
     <Compile Include="Types\CCubeTexture.cs" />
     <Compile Include="Types\CDecalSpawne.cs" />
-    <Compile Include="Types\SMeshBlock5.cs" />
+    <Compile Include="Types\Structs\SMeshBlock5.cs" />
     <Compile Include="Types\CMesh.cs" />
     <Compile Include="Types\CWayPointsCollection.cs" />
     <Compile Include="Types\CWayPointsCollectionsSet.cs" />
