Disable test on ci
Made the build fail. Since installing 60gb of witcher3's files is not really feasible on appveyor we shouldn't run tests.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,6 +16,8 @@ clone_script:
 # Update to the most recent VS.
 image: Visual Studio 2017
 
+test: off
+
 build:
   parallel: true   
   project: WolvenKit.sln
