--- a/WolvenKit/packages.config
+++ b/WolvenKit/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AltoControls" version="1.0.1" targetFramework="net461" />
+  <package id="AutoCompleteMenu-ScintillaNET" version="1.6.2" targetFramework="net48" />
   <package id="Autoupdater.NET.Official" version="1.4.11" targetFramework="net461" />
   <package id="CircularProgressBar" version="2.5.6403.13419" targetFramework="net461" />
   <package id="CyotekImageBox" version="1.3.0-Alpha1" targetFramework="net461" />
@@ -10,6 +11,7 @@
   <package id="DockPanelSuite" version="3.0.4" targetFramework="net461" />
   <package id="DockPanelSuite.ThemeVS2015" version="3.0.4" targetFramework="net461" />
   <package id="IniParserLTK" version="1.1.5" targetFramework="net461" />
+  <package id="jacobslusser.ScintillaNET" version="3.6.3" targetFramework="net48" />
   <package id="lz4net" version="1.0.15.93" targetFramework="net461" />
   <package id="LZ4PCL" version="1.0.0" targetFramework="net461" />
   <package id="MarkerMetro.Unity.Ionic.Zlib" version="2.0.0.14" targetFramework="net461" />
@@ -25,6 +27,7 @@
   <package id="PropertyGridEx" version="1.0.0" targetFramework="net461" />
   <package id="protobuf-net" version="2.3.15" targetFramework="net461" />
   <package id="RtfPipe" version="0.7.0.6" targetFramework="net461" />
+  <package id="ScintillaNET_FindReplaceDialog" version="1.0.3.3" targetFramework="net48" />
   <package id="SharpZipLib" version="1.0.0-alpha2" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
