--- a/WolvenKit/app.config
+++ b/WolvenKit/app.config
@@ -62,6 +62,7 @@
         <assemblyIdentity name="System.Security.Cryptography.Algorithms" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.1.0.0" newVersion="4.1.0.0" />
       </dependentAssembly>
+      <probing privatePath="lib;libs" xmlns="" />
     </assemblyBinding>
   </runtime>
   <startup>
