--- a/WolvenKit/packages.config
+++ b/WolvenKit/packages.config
@@ -4,6 +4,7 @@
   <package id="AutoCompleteMenu-ScintillaNET" version="1.6.2" targetFramework="net48" />
   <package id="Autoupdater.NET.Official" version="1.4.11" targetFramework="net461" />
   <package id="CircularProgressBar" version="2.5.6403.13419" targetFramework="net461" />
+  <package id="CommandLineParser" version="2.7.82" targetFramework="net48" />
   <package id="CyotekImageBox" version="1.3.0-Alpha1" targetFramework="net461" />
   <package id="DevZH.FlatBuffers" version="1.4.0" targetFramework="net461" />
   <package id="Dfust.Hotkeys" version="1.2.6206.24906" targetFramework="net461" />
